--- a/rsl_rl/rsl_rl/modules/test.ipynb
+++ b/rsl_rl/rsl_rl/modules/test.ipynb
@@ -87,15 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conf name = t1, length = 3\n",
-      "Conf name = t2, length = 3\n"
+      "Conf name = tri, length = 1\n"
      ]
     },
     {
@@ -104,7 +103,7 @@
        "C2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,8 +112,73 @@
     "G = CyclicGroup(2)\n",
     "gspace = escnn.gspaces.no_base_space(G)\n",
     "\n",
-    "add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
-    "add_repr_to_gspace(G, [1,0,2], [1,1,-1], 't2')"
+    "# add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
+    "# add_repr_to_gspace(G, [1,0,2], [1,1,-1], 't2')\n",
+    "\n",
+    "add_repr_to_gspace(G, [0], [1], 'tri')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'irrep_0': C2|[irrep_0]:1,\n",
+       " 'irrep_1': C2|[irrep_1]:1,\n",
+       " 'regular': C2|[regular]:2,\n",
+       " 'tri': C2|[tri]:1}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.representations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.representations['tri'](G.elements[1])  # 这个就是 trivial_representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.trivial_representation(G.elements[0])"
    ]
   },
   {
@@ -247,8 +311,8 @@
     {
      "data": {
       "text/plain": [
-       "g_tensor([[-1.7589, -0.8496,  0.6636],\n",
-       "          [-2.8443, -3.6686,  2.6408]], device='cuda:0',\n",
+       "g_tensor([[  0.2529,  -4.7182,  -1.1217],\n",
+       "          [  2.6172, -13.7864,  -3.6580]], device='cuda:0',\n",
        "         grad_fn=<AddmmBackward0>, [C2: {t1 (x1)}(3)])"
       ]
      },
@@ -329,8 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g_tensor([[-0.6636, -0.8496,  1.7589],\n",
-      "          [-2.6408, -3.6686,  2.8443]], device='cuda:0',\n",
+      "g_tensor([[  1.1217,  -4.7182,  -0.2529],\n",
+      "          [  3.6580, -13.7865,  -2.6172]], device='cuda:0',\n",
       "         grad_fn=<AddmmBackward0>, [C2: {t1 (x1)}(3)])\n"
      ]
     }
@@ -346,6 +410,105 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i:0, length:3\n",
+      "[0, 1, 2]\n",
+      "[-1, 1, -1]\n",
+      "\n",
+      "i:1, length:3\n",
+      "[0, 1, 2]\n",
+      "[1, -1, 1]\n",
+      "\n",
+      "i:2, length:3\n",
+      "[0, 1, 2]\n",
+      "[1, -1, -1]\n",
+      "\n",
+      "i:3, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:4, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:5, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:6, length:2\n",
+      "[0, 1]\n",
+      "[-1, -1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "a = np.array([-0.0001, 1, -2,\\\n",
+    "        3, -4, 5,\\\n",
+    "        6, -7, -8,])\n",
+    "\n",
+    "def transform_zycofig_to_code(config:list):\n",
+    "    a = np.array(config)\n",
+    "    tmp = np.abs(a).astype(int)\n",
+    "    permutation = tmp - tmp.min()\n",
+    "    is_negative = np.where(a>0, 1, -1)\n",
+    "    return permutation.tolist(), is_negative.tolist()\n",
+    "    \n",
+    "def transform_all(*configs):\n",
+    "    for i,config in enumerate(configs):\n",
+    "        permutation, is_negative = transform_zycofig_to_code(config)\n",
+    "        print(f\"i:{i}, length:{len(permutation)}\")\n",
+    "        print(permutation)\n",
+    "        print(is_negative)\n",
+    "        print()\n",
+    "\n",
+    "transform_all([\n",
+    "    -0.0001, 1, -2,\\\n",
+    "    ],[\n",
+    "    3, -4, 5,\\\n",
+    "    ],[    \n",
+    "    6, -7, -8,\\\n",
+    "    ],[\n",
+    "    15, -16, -17, 18, 19, -20,\\\n",
+    "    9, -10, -11, 12, 13, -14,\\\n",
+    "    -21,\\\n",
+    "    29, -30, -31, 32, -33, 34, -35,\\\n",
+    "    22, -23, -24, 25, -26, 27, -28,\\\n",
+    "    ],[\n",
+    "    42, -43, -44, 45, 46, -47,\\\n",
+    "    36, -37, -38, 39, 40, -41,\\\n",
+    "    -48,\\\n",
+    "    56, -57, -58, 59, -60, 61, -62,\\\n",
+    "    49, -50, -51, 52, -53, 54, -55,\\\n",
+    "    ],[\n",
+    "    69, -70, -71, 72, 73, -74,\\\n",
+    "    63, -64, -65, 66, 67, -68,\\\n",
+    "    -75,\\\n",
+    "    83, -84, -85, 86, -87, 88, -89,\\\n",
+    "    76, -77, -78, 79, -80, 81, -82,\n",
+    "    ],[\n",
+    "    -90, -91 \n",
+    "                          ])\n"
+   ]
   },
   {
    "cell_type": "code",
