--- a/rsl_rl/rsl_rl/modules/test.ipynb
+++ b/rsl_rl/rsl_rl/modules/test.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -509,6 +509,37 @@
     "    -90, -91 \n",
     "                          ])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i:0, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transform_all([    6, -7, -8, 9, 10, -11, \\\n",
+    "                    0.0001, -1, -2, 3, 4, -5, \\\n",
+    "                    -12, \\\n",
+    "                    20, -21, -22, 23, -24, 25, -26, \\\n",
+    "                    13, -14, -15, 16, -17, 18, -19  ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
