--- a/rsl_rl/rsl_rl/modules/test.ipynb
+++ b/rsl_rl/rsl_rl/modules/test.ipynb
@@ -87,13 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Conf name = t1, length = 3\n",
+      "Conf name = t2, length = 3\n",
       "Conf name = tri, length = 1\n"
      ]
     },
@@ -103,7 +105,7 @@
        "C2"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,15 +114,15 @@
     "G = CyclicGroup(2)\n",
     "gspace = escnn.gspaces.no_base_space(G)\n",
     "\n",
-    "# add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
-    "# add_repr_to_gspace(G, [1,0,2], [1,1,-1], 't2')\n",
+    "add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
+    "add_repr_to_gspace(G, [1,0,2], [1,1,-1], 't2')\n",
     "\n",
     "add_repr_to_gspace(G, [0], [1], 'tri')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -129,10 +131,12 @@
        "{'irrep_0': C2|[irrep_0]:1,\n",
        " 'irrep_1': C2|[irrep_1]:1,\n",
        " 'regular': C2|[regular]:2,\n",
+       " 't1': C2|[t1]:3,\n",
+       " 't2': C2|[t2]:3,\n",
        " 'tri': C2|[tri]:1}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +156,7 @@
        "array([[1.]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +176,7 @@
        "array([[1.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +200,7 @@
     "                 actor: bool = True,\n",
     "                 activation: str = \"ReLU\"):\n",
     "        super().__init__()\n",
+    "        self.in_type = in_type\n",
     "        self.out_type = out_type\n",
     "        gspace = in_type.gspace\n",
     "        group = gspace.fibergroup\n",
@@ -251,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,6 +285,15 @@
     "actor = actor.to(device=device)\n",
     "\n",
     "res1 = actor(in_field_type(obs_torch))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
    ]
   },
   {
@@ -420,119 +434,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i:0, length:3\n",
-      "[0, 1, 2]\n",
-      "[-1, 1, -1]\n",
-      "\n",
-      "i:1, length:3\n",
-      "[0, 1, 2]\n",
-      "[1, -1, 1]\n",
-      "\n",
-      "i:2, length:3\n",
-      "[0, 1, 2]\n",
-      "[1, -1, -1]\n",
-      "\n",
-      "i:3, length:27\n",
-      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
-      "\n",
-      "i:4, length:27\n",
-      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
-      "\n",
-      "i:5, length:27\n",
-      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
-      "\n",
-      "i:6, length:2\n",
-      "[0, 1]\n",
-      "[-1, -1]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "\n",
     "\n",
-    "a = np.array([-0.0001, 1, -2,\\\n",
-    "        3, -4, 5,\\\n",
-    "        6, -7, -8,])\n",
+    "# a = np.array([-0.0001, 1, -2,\\\n",
+    "#         3, -4, 5,\\\n",
+    "#         6, -7, -8,])\n",
     "\n",
-    "def transform_zycofig_to_code(config:list):\n",
-    "    a = np.array(config)\n",
-    "    tmp = np.abs(a).astype(int)\n",
-    "    permutation = tmp - tmp.min()\n",
-    "    is_negative = np.where(a>0, 1, -1)\n",
-    "    return permutation.tolist(), is_negative.tolist()\n",
+    "# def transform_zycofig_to_code(config:list):\n",
+    "#     a = np.array(config)\n",
+    "#     tmp = np.abs(a).astype(int)\n",
+    "#     permutation = tmp - tmp.min()\n",
+    "#     is_negative = np.where(a>0, 1, -1)\n",
+    "#     return permutation.tolist(), is_negative.tolist()\n",
     "    \n",
-    "def transform_all(*configs):\n",
-    "    for i,config in enumerate(configs):\n",
-    "        permutation, is_negative = transform_zycofig_to_code(config)\n",
-    "        print(f\"i:{i}, length:{len(permutation)}\")\n",
-    "        print(permutation)\n",
-    "        print(is_negative)\n",
-    "        print()\n",
+    "# def transform_all(*configs):\n",
+    "#     for i,config in enumerate(configs):\n",
+    "#         permutation, is_negative = transform_zycofig_to_code(config)\n",
+    "#         print(f\"i:{i}, length:{len(permutation)}\")\n",
+    "#         print(permutation)\n",
+    "#         print(is_negative)\n",
+    "#         print()\n",
     "\n",
-    "transform_all([\n",
-    "    -0.0001, 1, -2,\\\n",
-    "    ],[\n",
-    "    3, -4, 5,\\\n",
-    "    ],[    \n",
-    "    6, -7, -8,\\\n",
-    "    ],[\n",
-    "    15, -16, -17, 18, 19, -20,\\\n",
-    "    9, -10, -11, 12, 13, -14,\\\n",
-    "    -21,\\\n",
-    "    29, -30, -31, 32, -33, 34, -35,\\\n",
-    "    22, -23, -24, 25, -26, 27, -28,\\\n",
-    "    ],[\n",
-    "    42, -43, -44, 45, 46, -47,\\\n",
-    "    36, -37, -38, 39, 40, -41,\\\n",
-    "    -48,\\\n",
-    "    56, -57, -58, 59, -60, 61, -62,\\\n",
-    "    49, -50, -51, 52, -53, 54, -55,\\\n",
-    "    ],[\n",
-    "    69, -70, -71, 72, 73, -74,\\\n",
-    "    63, -64, -65, 66, 67, -68,\\\n",
-    "    -75,\\\n",
-    "    83, -84, -85, 86, -87, 88, -89,\\\n",
-    "    76, -77, -78, 79, -80, 81, -82,\n",
-    "    ],[\n",
-    "    -90, -91 \n",
-    "                          ])\n"
+    "# transform_all([\n",
+    "#     -0.0001, 1, -2,\\\n",
+    "#     ],[\n",
+    "#     3, -4, 5,\\\n",
+    "#     ],[    \n",
+    "#     6, -7, -8,\\\n",
+    "#     ],[\n",
+    "#     15, -16, -17, 18, 19, -20,\\\n",
+    "#     9, -10, -11, 12, 13, -14,\\\n",
+    "#     -21,\\\n",
+    "#     29, -30, -31, 32, -33, 34, -35,\\\n",
+    "#     22, -23, -24, 25, -26, 27, -28,\\\n",
+    "#     ],[\n",
+    "#     42, -43, -44, 45, 46, -47,\\\n",
+    "#     36, -37, -38, 39, 40, -41,\\\n",
+    "#     -48,\\\n",
+    "#     56, -57, -58, 59, -60, 61, -62,\\\n",
+    "#     49, -50, -51, 52, -53, 54, -55,\\\n",
+    "#     ],[\n",
+    "#     69, -70, -71, 72, 73, -74,\\\n",
+    "#     63, -64, -65, 66, 67, -68,\\\n",
+    "#     -75,\\\n",
+    "#     83, -84, -85, 86, -87, 88, -89,\\\n",
+    "#     76, -77, -78, 79, -80, 81, -82,\n",
+    "#     ],[\n",
+    "#     -90, -91 \n",
+    "#                           ])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i:0, length:27\n",
-      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
-      "\n"
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "1[2pi/2]\n",
+      "1[2pi/2] 2.3841858e-07 8.443991e-08 4.8356383e-15\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n",
+      "0[2pi/2]\n",
+      "0[2pi/2] 0.0 0.0 0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (1[2pi/2], 8.443991e-08),\n",
+       " (0[2pi/2], 0.0),\n",
+       " (0[2pi/2], 0.0)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = SimpleEMLP(in_field_type, out_field_type,\n",
+    "            hidden_dims = [256, 256, 256], \n",
+    "            activation = 'elu')\n",
+    "a2 = a2.to('cpu')\n",
+    "a2.check_equivariance(1e-5, 1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimpleEMLP(\n",
+      "  (net): SequentialModule(\n",
+      "    (linear_0: in=6-out=256): Linear(\n",
+      "      (_basisexpansion): BlocksBasisExpansion(\n",
+      "        (block_expansion_('t1', 'regular')): SingleBlockBasisExpansion()\n",
+      "        (block_expansion_('t2', 'regular')): SingleBlockBasisExpansion()\n",
+      "      )\n",
+      "    )\n",
+      "    (act_0): ELU(alpha=1.0, inplace=False, type=[C2: {regular (x128)}(256)])\n",
+      "    (linear_1: in=256-out=256): Linear(\n",
+      "      (_basisexpansion): BlocksBasisExpansion(\n",
+      "        (block_expansion_('regular', 'regular')): SingleBlockBasisExpansion()\n",
+      "      )\n",
+      "    )\n",
+      "    (act_1): ELU(alpha=1.0, inplace=False, type=[C2: {regular (x128)}(256)])\n",
+      "    (linear_2: in=256-out=256): Linear(\n",
+      "      (_basisexpansion): BlocksBasisExpansion(\n",
+      "        (block_expansion_('regular', 'regular')): SingleBlockBasisExpansion()\n",
+      "      )\n",
+      "    )\n",
+      "    (act_2): ELU(alpha=1.0, inplace=False, type=[C2: {regular (x128)}(256)])\n",
+      "    (linear_3: in=256-out=3): Linear(\n",
+      "      (_basisexpansion): BlocksBasisExpansion(\n",
+      "        (block_expansion_('regular', 't1')): SingleBlockBasisExpansion()\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "transform_all([    6, -7, -8, 9, 10, -11, \\\n",
-    "                    0.0001, -1, -2, 3, 4, -5, \\\n",
-    "                    -12, \\\n",
-    "                    20, -21, -22, 23, -24, 25, -26, \\\n",
-    "                    13, -14, -15, 16, -17, 18, -19  ])"
+    "print(a2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['net.linear_0: in=6-out=256.bias',\n",
+       " 'net.linear_0: in=6-out=256.weights',\n",
+       " 'net.linear_0: in=6-out=256.bias_expansion',\n",
+       " 'net.linear_0: in=6-out=256.expanded_bias',\n",
+       " 'net.linear_0: in=6-out=256.matrix',\n",
+       " \"net.linear_0: in=6-out=256._basisexpansion.block_expansion_('t1', 'regular').sampled_basis\",\n",
+       " \"net.linear_0: in=6-out=256._basisexpansion.block_expansion_('t2', 'regular').sampled_basis\",\n",
+       " 'net.linear_1: in=256-out=256.bias',\n",
+       " 'net.linear_1: in=256-out=256.weights',\n",
+       " 'net.linear_1: in=256-out=256.bias_expansion',\n",
+       " 'net.linear_1: in=256-out=256.expanded_bias',\n",
+       " 'net.linear_1: in=256-out=256.matrix',\n",
+       " \"net.linear_1: in=256-out=256._basisexpansion.block_expansion_('regular', 'regular').sampled_basis\",\n",
+       " 'net.linear_2: in=256-out=256.bias',\n",
+       " 'net.linear_2: in=256-out=256.weights',\n",
+       " 'net.linear_2: in=256-out=256.bias_expansion',\n",
+       " 'net.linear_2: in=256-out=256.expanded_bias',\n",
+       " 'net.linear_2: in=256-out=256.matrix',\n",
+       " \"net.linear_2: in=256-out=256._basisexpansion.block_expansion_('regular', 'regular').sampled_basis\",\n",
+       " 'net.linear_3: in=256-out=3.bias',\n",
+       " 'net.linear_3: in=256-out=3.weights',\n",
+       " 'net.linear_3: in=256-out=3.bias_expansion',\n",
+       " 'net.linear_3: in=256-out=3.expanded_bias',\n",
+       " 'net.linear_3: in=256-out=3.matrix',\n",
+       " \"net.linear_3: in=256-out=3._basisexpansion.block_expansion_('regular', 't1').sampled_basis\"]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(a2.state_dict().keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2.load_state_dict(a2.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
