--- a/rsl_rl/rsl_rl/modules/test.ipynb
+++ b/rsl_rl/rsl_rl/modules/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "C2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,14 +115,14 @@
     "gspace = escnn.gspaces.no_base_space(G)\n",
     "\n",
     "add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
-    "add_repr_to_gspace(G, [1,0,2], [1,1,-1], 't2')\n",
+    "add_repr_to_gspace(G, [1,0,2], [1,1,1], 't2')\n",
     "\n",
     "add_repr_to_gspace(G, [0], [1], 'tri')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " 'tri': C2|[tri]:1}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.,  1.],\n",
+       "       [ 1., -0.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.regular_representation(G.elements[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +177,7 @@
        "array([[1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +197,7 @@
        "array([[1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +329,7 @@
        "       [ 6.,  7.,  8.,  9., 10., 11.]], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,18 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "g_tensor([[  0.2529,  -4.7182,  -1.1217],\n",
-       "          [  2.6172, -13.7864,  -3.6580]], device='cuda:0',\n",
+       "g_tensor([[-2.0120, -0.9988,  1.1500],\n",
+       "          [-4.8036,  0.5642,  1.0720]], device='cuda:0',\n",
        "         grad_fn=<AddmmBackward0>, [C2: {t1 (x1)}(3)])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,21 +402,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'irrep_0': C2|[irrep_0]:1,\n",
+       " 'irrep_1': C2|[irrep_1]:1,\n",
+       " 'regular': C2|[regular]:2,\n",
+       " 't1': C2|[t1]:3,\n",
+       " 't2': C2|[t2]:3,\n",
+       " 'tri': C2|[tri]:1}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.representations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ -2,   1,   0,   4,   3,  -5],\n",
-      "        [ -8,   7,  -6,  10,   9, -11]], device='cuda:0', dtype=torch.int32)\n"
+      "tensor([[-2,  1,  0,  4,  3,  5],\n",
+      "        [-8,  7, -6, 10,  9, 11]], device='cuda:0', dtype=torch.int32)\n"
      ]
     }
    ],
    "source": [
     "o2 = get_symm_tensor(obs_torch, G, ['t1', 't2'])\n",
     "print(o2.int())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = CyclicGroup(2)\n",
+    "gspace = escnn.gspaces.no_base_space(G)\n",
+    "\n",
+    "add_repr_to_gspace(G, [2,1,0], [-1,1,-1], 't1')\n",
+    "add_repr_to_gspace(G, [1,0,2], [1,1,1], 't2')\n",
+    "\n",
+    "add_repr_to_gspace(G, [0], [1], 'tri')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.,  1.,  2.,  3.,  4.,  5.],\n",
+       "        [ 6.,  7.,  8.,  9., 10., 11.]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs_torch"
    ]
   },
   {
