--- a/rsl_rl/rsl_rl/modules/test.ipynb
+++ b/rsl_rl/rsl_rl/modules/test.ipynb
@@ -523,59 +523,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i:0, length:3\n",
+      "[0, 1, 2]\n",
+      "[-1, 1, -1]\n",
+      "\n",
+      "i:1, length:3\n",
+      "[0, 1, 2]\n",
+      "[1, -1, 1]\n",
+      "\n",
+      "i:2, length:3\n",
+      "[0, 1, 2]\n",
+      "[1, -1, -1]\n",
+      "\n",
+      "i:3, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:4, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:5, length:27\n",
+      "[6, 7, 8, 9, 10, 11, 0, 1, 2, 3, 4, 5, 12, 20, 21, 22, 23, 24, 25, 26, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, -1, 1, -1]\n",
+      "\n",
+      "i:6, length:2\n",
+      "[0, 1]\n",
+      "[-1, -1]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# import numpy as np\n",
+    "import numpy as np\n",
     "\n",
     "\n",
-    "# a = np.array([-0.0001, 1, -2,\\\n",
-    "#         3, -4, 5,\\\n",
-    "#         6, -7, -8,])\n",
+    "a = np.array([-0.0001, 1, -2,\\\n",
+    "        3, -4, 5,\\\n",
+    "        6, -7, -8,])\n",
     "\n",
-    "# def transform_zycofig_to_code(config:list):\n",
-    "#     a = np.array(config)\n",
-    "#     tmp = np.abs(a).astype(int)\n",
-    "#     permutation = tmp - tmp.min()\n",
-    "#     is_negative = np.where(a>0, 1, -1)\n",
-    "#     return permutation.tolist(), is_negative.tolist()\n",
+    "def transform_zycofig_to_code(config:list):\n",
+    "    a = np.array(config)\n",
+    "    tmp = np.abs(a).astype(int)\n",
+    "    permutation = tmp - tmp.min()\n",
+    "    is_negative = np.where(a>0, 1, -1)\n",
+    "    return permutation.tolist(), is_negative.tolist()\n",
     "    \n",
-    "# def transform_all(*configs):\n",
-    "#     for i,config in enumerate(configs):\n",
-    "#         permutation, is_negative = transform_zycofig_to_code(config)\n",
-    "#         print(f\"i:{i}, length:{len(permutation)}\")\n",
-    "#         print(permutation)\n",
-    "#         print(is_negative)\n",
-    "#         print()\n",
+    "def transform_all(*configs):\n",
+    "    for i,config in enumerate(configs):\n",
+    "        permutation, is_negative = transform_zycofig_to_code(config)\n",
+    "        print(f\"i:{i}, length:{len(permutation)}\")\n",
+    "        print(permutation)\n",
+    "        print(is_negative)\n",
+    "        print()\n",
     "\n",
-    "# transform_all([\n",
-    "#     -0.0001, 1, -2,\\\n",
-    "#     ],[\n",
-    "#     3, -4, 5,\\\n",
-    "#     ],[    \n",
-    "#     6, -7, -8,\\\n",
-    "#     ],[\n",
-    "#     15, -16, -17, 18, 19, -20,\\\n",
-    "#     9, -10, -11, 12, 13, -14,\\\n",
-    "#     -21,\\\n",
-    "#     29, -30, -31, 32, -33, 34, -35,\\\n",
-    "#     22, -23, -24, 25, -26, 27, -28,\\\n",
-    "#     ],[\n",
-    "#     42, -43, -44, 45, 46, -47,\\\n",
-    "#     36, -37, -38, 39, 40, -41,\\\n",
-    "#     -48,\\\n",
-    "#     56, -57, -58, 59, -60, 61, -62,\\\n",
-    "#     49, -50, -51, 52, -53, 54, -55,\\\n",
-    "#     ],[\n",
-    "#     69, -70, -71, 72, 73, -74,\\\n",
-    "#     63, -64, -65, 66, 67, -68,\\\n",
-    "#     -75,\\\n",
-    "#     83, -84, -85, 86, -87, 88, -89,\\\n",
-    "#     76, -77, -78, 79, -80, 81, -82,\n",
-    "#     ],[\n",
-    "#     -90, -91 \n",
-    "#                           ])\n"
+    "transform_all([\n",
+    "    -0.0001, 1, -2,\\\n",
+    "    ],[\n",
+    "    3, -4, 5,\\\n",
+    "    ],[    \n",
+    "    6, -7, -8,\\\n",
+    "    ],[\n",
+    "    15, -16, -17, 18, 19, -20,\\\n",
+    "    9, -10, -11, 12, 13, -14,\\\n",
+    "    -21,\\\n",
+    "    29, -30, -31, 32, -33, 34, -35,\\\n",
+    "    22, -23, -24, 25, -26, 27, -28,\\\n",
+    "    ],[\n",
+    "    42, -43, -44, 45, 46, -47,\\\n",
+    "    36, -37, -38, 39, 40, -41,\\\n",
+    "    -48,\\\n",
+    "    56, -57, -58, 59, -60, 61, -62,\\\n",
+    "    49, -50, -51, 52, -53, 54, -55,\\\n",
+    "    ],[\n",
+    "    69, -70, -71, 72, 73, -74,\\\n",
+    "    63, -64, -65, 66, 67, -68,\\\n",
+    "    -75,\\\n",
+    "    83, -84, -85, 86, -87, 88, -89,\\\n",
+    "    76, -77, -78, 79, -80, 81, -82,\n",
+    "    ],[\n",
+    "    -90, -91 \n",
+    "                          ])\n"
    ]
   },
   {
